Obtain diplotypes from PGX Data Service

--- a/cds-service/package.json
+++ b/cds-service/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "request": "^2.73.0",
     "morgan": "^1.7.0"
   },
   "devDependencies": {
