Adapt CDS Service to BCH environment

--- a/cds-service/package.json
+++ b/cds-service/package.json
@@ -1,21 +1,19 @@
 {
   "name": "pgx-cds-service",
+  "author": "MedAppTech",
   "version": "0.0.1",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
     "watch": "./node_modules/.bin/nodemon ./src/index.js",
-    "start": "node ./src/index.js",
-    "update-rxnorm": "node ./src/rxnorm/update.js"
+    "start": "node ./src/index.js"
   },
-  "author": "MedAppTech",
   "dependencies": {
     "body-parser": "^1.15.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
-    "request": "^2.73.0",
-    "q": "^1.4.1"
+    "nunjucks": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
